--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,92 @@
+*{
+  box-sizing: border-box;
+}
+*:focus{
+  border-color: blue;
+  box-shadow: none;
+  outline:none;
+}
+html{
+  font-size: 16px;
+  color: #00003b;
+}
+
+button{
+  border: 1px solid;
+  background-color: #FFF;
+  width: 6rem;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction:column;
+  width: 100%;
+  max-width: 45rem;
+  margin: auto;
+  align-items: center;
+  padding: 1rem;
 }
 
-textArea{
-  height:auto;
-  width: 80vw;
-  min-height: 80vh;
-  max-width: 800px;
+.header{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
+.Editor-Title{
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid;
+  font-size: 3em;
+  padding-left: 1rem;
+  width: 50%;
+}
+.Editor-Title:focus{
+  border-color: blue;
+  box-shadow: none;
+  outline:none;
+}
+
+.Editor-Cluster{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.Editor-Post-Indicator{
+  margin: 0;
+  position:relative;
+  z-index: -1;
+}
+
+.Editor-Input{
+  width: 10rem;
+  padding:0px;
+  outline: 1px solid black;
+  box-shadow: none;
+  outline:none;
+}
+
+.Editor-Input:focus, .Editor-Input:active{
+  border-width: 1px;
+  padding: 1px;
+  box-shadow: none;
+  outline: 0px;
+}
+
+.Editor-Body{
+  border: 1px solid black;
+  width: 100%;
+  line-height: 1.6;
+  margin: 1rem 0 1rem;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 1rem;
+}
+
+.Editor-Body:focus{
+  border: 1px solid blue;
+  box-shadow: none;
+  outline:none;
+}
